(헤더)회원 프로필 이미지 추가, (footer) back to top 버튼 추가, 내 게시글 조회 기능 구현중

--- a/camp/src/main/webapp/resources/css/bootstrap_main_header.css
+++ b/camp/src/main/webapp/resources/css/bootstrap_main_header.css
@@ -371,6 +371,7 @@ pre {
   margin-bottom: 1rem;
   overflow: auto;
   font-size: 0.875em;
+  padding: 20px 0px;
 }
 pre code {
   font-size: inherit;
