--- a/camp/src/main/webapp/resources/css/reservation.css
+++ b/camp/src/main/webapp/resources/css/reservation.css
@@ -136,12 +136,13 @@ a{
     cursor: pointer;
 }
 .info{
-    width: 98%;
+    width: 100%;
     height: 600px;
     border: 1px solid black;
     display: flex;
     flex-wrap: nowrap;
     margin-top: 50px;
+    justify-content: center;
     /* justify-content: space-between; */
 }
 .SELECTDATE{
