--- a/camp/src/main/webapp/resources/css/main.css
+++ b/camp/src/main/webapp/resources/css/main.css
@@ -484,10 +484,16 @@ main {
   display: flex;
   justify-content: center;
   color: #686262;
+  font-size: 16px;
 }
 #projectBySpan{
- /*  display: flex; */
+  color: #212529;
+  font-size: 17px;
 }
+#footer > .py-4 {
+  padding-top: 15px !important;
+}
+
 /*****************************************/
 
 .section-title > h1 {
