--- a/camp/src/main/webapp/resources/css/signUp.css
+++ b/camp/src/main/webapp/resources/css/signUp.css
@@ -973,12 +973,24 @@ hr {
 }
 #footer > .py-4 {
   padding: 24px 12px !important;
+  padding-top: 15px !important;
 }
 #footer{
   background-color: #eee;
 }
 .footer-top{
   background-color: #eee;
+}
+
+#projectBy {
+  display: flex;
+  justify-content: center;
+  color: #686262;
+  font-size: 16px;
+}
+#projectBySpan{
+  color: #212529;
+  font-size: 17px;
 }
 
 
