--- a/camp/src/main/webapp/resources/css/main.css
+++ b/camp/src/main/webapp/resources/css/main.css
@@ -5,7 +5,7 @@
 body {
     height: auto;
     margin: 0;
-   /*  margin-top: 90px; */
+    margin-top: 90px;
 /*     background-image: url('../images/test1.jpg'); 
      background-size: 100% 100%;  */
 }
