--- a/camp/src/main/webapp/resources/css/mypage.css
+++ b/camp/src/main/webapp/resources/css/mypage.css
@@ -26,13 +26,13 @@
            /*상 우  하 좌  */
 }
 
-.list-group > li{
+.list-group  li{
     list-style: none;
     height: 50px;
     font-size: 18px;
 }
 
-.list-group > li > a{
+.list-group  li > a{
     text-decoration: none;
     color : black;
     height: 100%;
@@ -45,7 +45,7 @@
     border-bottom : 2px solid #ddd;
 }
 
-.list-group > li:hover{
+.list-group  li:hover{
     background-color: #f2f2f2;
 }
 
@@ -54,6 +54,7 @@
     width: 85%;
     padding: 0 50px;
     border-left : 2px solid #ddd;
+    min-height: 670px;
 }
 
 .myPage-title{
