게시판 사이드바 추가

--- a/camp/src/main/webapp/resources/css/findIdPw.css
+++ b/camp/src/main/webapp/resources/css/findIdPw.css
@@ -863,7 +863,6 @@ hr {
 }
 
 
-
 /* ---------------------------------------------------------------------------------------- */
 
 /*--------------------------------------------------------------
@@ -873,7 +872,7 @@ hr {
   background: #fff;
   padding: 0 0 20px 0;
   color: #212529;
-  font-size: 18px;
+  font-size: 16px;
   background: #fef8f5;
 }
 
@@ -911,13 +910,12 @@ hr {
   font-weight: bold;
   color: #212529;
   position: relative;
-  padding-bottom: 12px;
+  padding-bottom: 6px;
 }
 
-/* #footer .footer-top .footer-links {
-   margin-bottom: 30px;
-} 
-*/
+#footer .footer-top .footer-links {
+  /* margin-bottom: 30px; */
+}
 
 #footer .footer-top .footer-links ul {
   list-style: none;
@@ -933,7 +931,7 @@ hr {
 }
 
 #footer .footer-top .footer-links ul li {
-  padding: 10px 0;
+  padding: 7px 0;
   display: flex;
   align-items: center;
 }
@@ -1011,7 +1009,7 @@ hr {
 }
 #footer > .py-4 {
   padding: 24px 12px !important;
-  padding-top: 15px !important;
+  padding-top: 4px !important;
 }
 #footer{
   background-color: #eee;
@@ -1020,19 +1018,24 @@ hr {
   background-color: #eee;
 }
 
-
 #projectBy {
   display: flex;
   justify-content: center;
   color: #686262;
   font-size: 16px;
+  margin-top: 20px;
 }
 #projectBySpan{
   color: #212529;
   font-size: 17px;
 }
+.footer-top > .container > .row {
+  margin-left: 70px !important;
+}
+
 
 /*    footer 끝   */
+
 
 .row {
   --bs-gutter-x: 1.5rem;
