--- a/camp/src/main/webapp/resources/css/boardList-style1.css
+++ b/camp/src/main/webapp/resources/css/boardList-style1.css
@@ -9,7 +9,7 @@ hr{
 /* a태그 공통 설정 */
 .board a{
     text-decoration: none;
-    color : black;
+    color : black;  
 }
 .board a:hover{
     text-decoration: underline;
@@ -20,12 +20,66 @@ hr{
     display: flex;
     justify-content: center;
     flex-direction: column;
-    height: 1300px;
+    height: auto;
     background-color: rgb(240, 244, 241);
-    /* margin-left: 30px; */
-    /* margin: 50px auto; */
-    /* border : 1px solid yellow; */
+    width: 85%;
+    padding: 0 50px;
+    border-left : 2px solid #ddd;
+    min-height: 670px;
+    padding-top: 50px;
 }
+
+/* 왼쪽 사이드 메뉴 */
+.myPage-content{
+    width: 1850px;
+    height: auto;
+    margin: 25px;
+    margin-left: 0px;
+    display: flex;
+}
+
+
+.left-side{
+    position: sticky;
+    top: 120px;
+    width: 12%;
+    
+    /* border-right : 2px solid gray; */
+    text-align: center;
+    height: 300px;
+}
+
+.list-group{
+    width: 100%;
+    padding: 0 5px 0 5;
+           /*상 우  하 좌  */
+}
+
+.list-group  li{
+    list-style: none;
+    height: 50px;
+    font-size: 18px;
+}
+
+.list-group  li > a{
+    text-decoration: none;
+    color : black;
+    height: 100%;
+
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+
+    /* border-bottom : 2px solid #ddd; */
+}
+
+.list-group  li:hover{
+    background-color: #f2f2f2;
+}
+/* 사이드메뉴 끝  */
+
+
 
 /* span */
 span{
