--- a/camp/src/main/webapp/resources/css/login.css
+++ b/camp/src/main/webapp/resources/css/login.css
@@ -782,7 +782,7 @@ cursor: pointer;
   background: #fff;
   padding: 0 0 20px 0;
   color: #212529;
-  font-size: 18px;
+  font-size: 16px;
   background: #fef8f5;
 }
 
@@ -820,7 +820,7 @@ cursor: pointer;
   font-weight: bold;
   color: #212529;
   position: relative;
-  padding-bottom: 12px;
+  padding-bottom: 6px;
 }
 
 #footer .footer-top .footer-links {
@@ -841,7 +841,7 @@ cursor: pointer;
 }
 
 #footer .footer-top .footer-links ul li {
-  padding: 10px 0;
+  padding: 7px 0;
   display: flex;
   align-items: center;
 }
@@ -919,7 +919,7 @@ cursor: pointer;
 }
 #footer > .py-4 {
   padding: 24px 12px !important;
-  padding-top: 15px !important;
+  padding-top: 4px !important;
 }
 #footer{
   background-color: #eee;
@@ -933,10 +933,14 @@ cursor: pointer;
   justify-content: center;
   color: #686262;
   font-size: 16px;
+  margin-top: 20px;
 }
 #projectBySpan{
   color: #212529;
   font-size: 17px;
+}
+.footer-top > .container > .row {
+  margin-left: 70px !important;
 }
 
 
