--- a/camp/src/main/webapp/resources/css/main.css
+++ b/camp/src/main/webapp/resources/css/main.css
@@ -348,7 +348,7 @@ main {
   background: #fff;
   padding: 0 0 20px 0;
   color: #212529;
-  font-size: 18px;
+  font-size: 16px;
   background: #fef8f5;
 }
 
@@ -385,11 +385,11 @@ main {
   font-weight: bold;
   color: #212529;
   position: relative;
-  padding-bottom: 12px;
+  padding-bottom: 6px;
 }
 
-#footer .footer-top .footer-links {
-  /* margin-bottom: 30px; */
+.footer-top > .container > .row {
+  margin-left: 70px !important;
 }
 
 #footer .footer-top .footer-links ul {
@@ -406,7 +406,7 @@ main {
 }
 
 #footer .footer-top .footer-links ul li {
-  padding: 10px 0;
+  padding: 7px 0;
   display: flex;
   align-items: center;
 }
@@ -485,13 +485,14 @@ main {
   justify-content: center;
   color: #686262;
   font-size: 16px;
+  margin-top: 20px;
 }
 #projectBySpan{
   color: #212529;
   font-size: 17px;
 }
 #footer > .py-4 {
-  padding-top: 15px !important;
+  padding-top: 4px !important;
 }
 
 /*****************************************/
