--- a/camp/src/main/webapp/resources/css/signUp.css
+++ b/camp/src/main/webapp/resources/css/signUp.css
@@ -15,7 +15,7 @@ main {
     width: auto;
     height: 1400px;
     margin: auto;
-    background-image: url("../images/signUpBg3.jpg");
+    background-image: url('../images/findIdPw6.jpg'); 
     background-size: 100% 1400px;
 }
 
@@ -262,15 +262,16 @@ h1{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url("../images/signUpBg3.jpg");
-    background-size: 100% 1130px;
+    border: #212529 1px solid !important;
+    /* background-image: url('../images/findIdPw6.png');  */
+    /* background-size: 100% 1130px; */
     padding: 0 !important;
+    opacity: 0.2;
     /* background-color: rgb(255 255 255 / 16%) !important;  */
     /* box-shadow: 2px 7px 15px 8px rgba(0,0,0,0.3); */
     /* backdrop-filter: blur(5px) !important; */
     /* background-color: #000000 !important; */
     /* background-size: 650px 1130px; */
-   
 }
 /* .backdrop {
     display: flex;
@@ -284,7 +285,9 @@ h1{
     box-shadow: 2px 7px 15px 8px rgba(0,0,0,0.3); 
   } 
   */
-
+.signUpRight{
+  opacity: 0.9;
+}
 .signUp-input-area {
     display: flex;
     align-items: center;
@@ -321,7 +324,8 @@ h1{
     width: 650px;
     margin-top: 100px;
     --bs-bg-opacity: 1;
-    background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity));
+    /* background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)); */
+    background-color: #ffffff;
     padding-top: 2.5rem;
     padding-bottom: 2.5rem;
     padding-right: 35px;
@@ -473,7 +477,7 @@ h1{
     color: #212529;
     background-color: #fff;
     background-clip: padding-box;
-    border: 1px solid #ced4da;
+    border: 1px solid #024717;
     -webkit-appearance: none;
        -moz-appearance: none;
             appearance: none;
@@ -692,7 +696,7 @@ h1{
     --bs-btn-color: #ffffff;
     --bs-btn-bg: #5b5b5c;
     --bs-btn-border-color: #5b5b5c;
-    --bs-btn-hover-color: #f8fcca;
+    --bs-btn-hover-color: #23f135;
     --bs-btn-hover-bg: #070707;
     --bs-btn-hover-border-color: #070707;
     --bs-btn-focus-shadow-rgb: 64, 79, 245;
