--- a/camp/src/main/webapp/resources/css/calendarStyle.css
+++ b/camp/src/main/webapp/resources/css/calendarStyle.css
@@ -1,5 +1,5 @@
 :root{
-    --primary-clr: #4fa93f;
+    --primary-clr: rgba(0, 0, 0, 0.6);
 }
 *{
     margin: 0;
@@ -18,14 +18,15 @@ body{
 
 .containerCal{
     position: relative;
-    width: 450px;
-    height: 98%;
-    box-shadow: 5px 5px 5px 5px lightgrey;
+    width: 90%;
+    height: 95%;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.527), 0 10px 10px rgba(0, 0, 0, 0.495);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
     padding: 10px;
     color: #fff;
     display: flex;
     border-radius: 10px;
-    background-color: #4fa93f;
+    background-color: rgb(246, 246, 246, 0.5);
 }
 /* .left{
     width: 40%;
@@ -40,10 +41,10 @@ body{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    justify-content: space-between;
-    color: #878895;
+    justify-content: space-around;
+    color: #fff;
     border-radius: 5px;
-    background-color: #fff;
+    background-color: rgb(246, 246, 246, 0.5);
     margin: 5px;
     padding: 0;
 }
@@ -78,7 +79,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 20px;
+    padding: 0 25px;
     font-size: 10px;
     font-weight: 500;
     text-transform: capitalize;
@@ -96,10 +97,11 @@ body{
     display: flex;
     flex-wrap: wrap;
     /* justify-content: space-between; */
-    padding: 0 5px;
+    padding: 0 50px 0 30px;
     font-size: 8px;
     font-weight: 500;
-    margin-bottom: 20px;
+    margin: 0 10px 20px 10px;
+
 }
 .calendar .days .day{
     width: 14.28%;
@@ -109,7 +111,7 @@ body{
     justify-content: flex-start;
     cursor: pointer;
     color: var(--primary-clr);
-    border: 1px solid #f5f5f5;
+    border: 1px solid #fff;
     font-size: 15px;
 }
 
@@ -117,16 +119,17 @@ body{
     color: #fff;
     background-color: var(--primary-clr);
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 .calendar .days .prev-date,
 .calendar .days .next-date{
-    color: #b3b3b3;
+    color: #fff;
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
 .calendar .days .active{
     position: relative;
-    
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
     font-size: 20px;
     color: #fff;
     background-color: var(--primary-clr);
@@ -156,7 +159,7 @@ body{
     width: 75%;
     height: 6px;
     border-radius: 30px;
-   
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
     background-color: var(--primary-clr);
 }
 .calendar .event:hover::after{
@@ -177,7 +180,7 @@ body{
     justify-content: space-between;
     gap: 5px;
     padding: 0 20px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     color: var(--primary-clr);
 }
 .calendar .goto-today .goto{
@@ -186,11 +189,11 @@ body{
     align-items: center;
     border-radius: 5px;
     overflow: hidden;
-    border: 1px solid var(--primary-clr);
+    border: none;
 }
 .calendar .goto-today .goto input{
     width: 100%;
-    height: 20px;
+    height: 37px;
     outline: none;
     border: none;
     border-radius: 5px;
@@ -467,15 +470,16 @@ body{
 }
 .reselect{
     width: 100px;
+    height: 30px;
     padding: 5px;
     margin-left: 20px;
-    margin-bottom: 10px;
+    margin-top: 10px;
     border-radius: 5px;
-    border: 1px solid var(--primary-clr);
+    border: none;
     background-color: #fff;
-    font-size: 9px;
+    font-size: 12px;
     font-family: "Poppins", sans-serif;
-    color: #878787;
+    color: #414141;
     cursor: pointer;
 }
 .reselect:hover{
@@ -486,13 +490,16 @@ body{
     display: flex;
     /* justify-content: space-between; */
     height: 40px;
-    width: 390px;
+    width: 90%;
     margin: 15px;
     font-weight: 100;
     align-items: center;
     justify-content: center;
-
+ 
     
+}
+.check > *{
+    color: #444444;
     
 }
 
@@ -501,6 +508,8 @@ body{
     justify-content: space-between;
     height: 50px;
     padding: 0 80px 0 80px;
+    font-size: 20px;
+    font-weight: bold;
     
 }
 .total{
@@ -510,14 +519,14 @@ body{
 }
 
 .total-days{
-    width: 80px;
+    width: 100px;
     height: 30px;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    font-weight: 100;
-    margin-top: 7px;
-    margin-left: 5px;
+    font-weight: bold;
+    margin-top: 9px;
+    margin-left: 9px;
     
 }
 .first-day{
@@ -540,9 +549,10 @@ body{
 }
 .event-day{
     
-    width: 120px;
+    width: 150px;
     height: 35px;
-   
+    font-size: 25px;
+    font-weight: bold;
     
     
 }
