--- a/camp/src/main/webapp/resources/css/login.css
+++ b/camp/src/main/webapp/resources/css/login.css
@@ -779,7 +779,7 @@ cursor: pointer;
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: #fff;
+  /* background: #fff; */
   padding: 0 0 20px 0;
   color: #212529;
   font-size: 16px;
@@ -792,7 +792,7 @@ cursor: pointer;
   background: #fff;
   padding-top: 30px;
   padding-bottom: 20px;
-  background-color: #eee !important;
+/*   background-color: #eee !important; */
 }
 
 #footer .footer-top .footer-contact {
@@ -921,13 +921,13 @@ cursor: pointer;
   padding: 24px 12px !important;
   padding-top: 4px !important;
 }
-#footer{
+/* #footer{
   background-color: #eee;
 }
 .footer-top{
   background-color: #eee;
 }
-
+ */
 #projectBy {
   display: flex;
   justify-content: center;
