--- a/camp/src/main/webapp/resources/css/main.css
+++ b/camp/src/main/webapp/resources/css/main.css
@@ -345,7 +345,7 @@ main {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: #fff;
+/*   background: #fff; */
   padding: 0 0 20px 0;
   color: #212529;
   font-size: 16px;
