--- a/camp/src/main/webapp/resources/css/reservation.css
+++ b/camp/src/main/webapp/resources/css/reservation.css
@@ -3,14 +3,41 @@ main{
     width: 100%;
 }
 h4{
-    margin-top: 20px;
+    font-size: 22px;
+    margin: 20px 0 30px 0;
+    padding: 2px 0 2px 0;
+    line-height: 1;
+    font-weight: 700;
 }
 
 /* 
 a{
     color: ;
 } */
+.priceTable {
+    border-collapse: collapse;
+    width: 100%;
+}
+#peopleNo{
+    display: flex;
+    justify-content: center;
+    font-size: 25px;
+    font-weight: bold;
+    padding-top: 10px;
+}
+.priceTable > tr,th,td {
+    border: 1px solid rgb(81, 81, 81);
+    padding: 12px;
+    text-align: center;
+}
 
+
+.priceTable > caption {
+    font-weight: bold;
+    margin-bottom: 20px;
+    margin-top: 30px;
+    font-size: 25px;
+}
 /* li{
     display: flex;
     flex-direction: column;
@@ -122,9 +149,9 @@ a{
 .priceInformation{
     box-shadow: 5px 5px 5px 5px lightgrey;
     border-radius: 15px;
-    height: 200px;
+    height: 300px;
     margin: 20px 0 20px 0;
-    width: 440px;
+    width: 90%;
     background-color: rgb(246, 246, 246, 0.5);
 }
 
@@ -138,7 +165,7 @@ a{
     
     z-index: 99;
     width: 90%;
-    height: 600px;
+    height: 700px;
     border: none;
     display: flex;
     flex-wrap: nowrap;
@@ -290,7 +317,7 @@ a{
 }
 .MemberInfo{
     width: 500px;
-    height: 550px;
+    height: 630px;
     margin-top: 20px;
     border-radius: 15px;
     display: flex;
@@ -337,8 +364,9 @@ a{
 .buttons{
     display: flex;
     justify-content: center;
-    margin-top: 50px;
+    margin-top: 30px;
     z-index: 2;
+    margin-bottom: 60px;
 }
 div.check input{
     background-color: transparent;
