--- a/camp/src/main/webapp/resources/css/signUp.css
+++ b/camp/src/main/webapp/resources/css/signUp.css
@@ -835,7 +835,7 @@ hr {
 # Footer
 --------------------------------------------------------------*/
 #footer {
-  background: #fff;
+/*   background: #fff; */
   padding: 0 0 20px 0;
   color: #212529;
   font-size: 16px;
@@ -848,7 +848,7 @@ hr {
   background: #fff;
   padding-top: 30px;
   padding-bottom: 20px;
-  background-color: #eee !important;
+/*   background-color: #eee !important; */
 }
 
 #footer .footer-top .footer-contact {
@@ -977,12 +977,12 @@ hr {
   padding: 24px 12px !important;
   padding-top: 4px !important;
 }
-#footer{
+/* #footer{
   background-color: #eee;
 }
 .footer-top{
   background-color: #eee;
-}
+} */
 
 #projectBy {
   display: flex;
