아이디비밀번호찾기 < > 위치조정

--- a/camp/src/main/webapp/resources/css/detailList.css
+++ b/camp/src/main/webapp/resources/css/detailList.css
@@ -201,6 +201,7 @@ body {
     height: auto;
     overflow: hidden;
     clear: both;
+    box-shadow: 0 0 20px 12px rgb(32 97 31 / 20%);
 }
 
 .camp_info_box .img_b {
