--- a/camp/src/main/webapp/resources/css/campList.css
+++ b/camp/src/main/webapp/resources/css/campList.css
@@ -241,6 +241,7 @@ hr {
     padding: 15px;
     border-radius: 10px;
     padding-left: 30px;
+    box-shadow: 0 0 20px 12px rgb(32 97 31 / 20%);
     
 }
 
