--- a/camp/src/main/webapp/resources/css/paymentInfo.css
+++ b/camp/src/main/webapp/resources/css/paymentInfo.css
@@ -1,3 +1,8 @@
+body{
+    height: 1200px;
+    margin: 0;
+    padding: 0;
+}
 h1{
     text-align: center;
     margin-bottom: 30px;
@@ -7,6 +12,7 @@ h1{
     width: 1000px;
     height: 1000px;
     margin: auto;
+    z-index: 999;
 }
 .campN{
     font-size: 15px;
@@ -19,13 +25,24 @@ h1{
 }
 .paymentInfo{
     width: 600px;
-    height: 900px;
+    height: 850px;
     border: none;
     margin: auto;
-    margin-top: 70px;
+    margin-top: 120px;
     border-radius: 15px;
-    box-shadow: 0 3px 5px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+    color: #fff;
+    z-index: 99;
+    position: relative;
+    -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    -moz-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    -ms-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    -o-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.999), 0 6px 6px rgb(0, 0, 0);
+    /* justify-content: space-between; */
+    /* opacity: 0.5; */
+    border-radius: 15px;
+    background-color: #ffffff;
+    background-color: rgba(0, 0, 0, 0.6);
 }
 input{
     margin: 10px 0 30px 0 ;
@@ -58,7 +75,8 @@ input#address, #postcode, #detailAddress{
 }
 .reverPeople{
    text-align: center;
-   margin-top: 20px;
+   margin-top: 40px;
+   z-index: 99;
 }
 .peopleSum{
     display: flex;
@@ -73,8 +91,14 @@ input#address, #postcode, #detailAddress{
     flex-wrap: nowrap;
     align-items: center;
     margin: auto;
-    
+    margin-top: 20px;
+    z-index: 99;
     justify-content: center;
+    position: relative;
+    color: #fff;
+    font-weight:800;
+    font-size: 22px;
+    text-shadow: 5px 5px 7px rgba(0, 0, 0, 0.874);
 }
 .price2{
     width: 150px;
@@ -90,3 +114,22 @@ input#address, #postcode, #detailAddress{
     justify-content: center;
     margin: 0;
 }
+.video-container {
+    width: 100%;/* 원하는 가로 크기 */
+    height: 1150px; /* 원하는 세로 크기 */
+    overflow: hidden;
+    position:absolute;
+    top: 0;
+    left: 0;
+    z-index: -99;
+  }
+.video-container video {
+    /* position:absolute; */
+    /* top: 0;
+    left: 0; */
+    object-fit: cover;
+    width: 100% !important;
+    height: 100% !important;
+    z-index: -99;
+    
+  }
