--- a/camp/src/main/webapp/resources/css/findIdPw.css
+++ b/camp/src/main/webapp/resources/css/findIdPw.css
@@ -303,7 +303,7 @@ align-items: center;
 opacity: 0.3;
 border: 1px solid black !important;
 background-image: url('../images/findIdPw7.png'); 
-background-size: 100%; 
+background-size: 100% 100%; 
 /* background-position: 60% 1%;  */
 padding: 0 !important;
 
