--- a/camp/src/main/webapp/resources/css/bootstrap_main_header.css
+++ b/camp/src/main/webapp/resources/css/bootstrap_main_header.css
@@ -1855,7 +1855,7 @@ progress {
   }
 }
 
-.table {
+/* .table {
   --bs-table-color-type: initial;
   --bs-table-bg-type: initial;
   --bs-table-color-state: initial;
@@ -1874,7 +1874,7 @@ progress {
   margin-bottom: 1rem;
   vertical-align: top;
   border-color: var(--bs-table-border-color);
-}
+} */
 /* .table > :not(caption) > * > * {
   padding: 0.5rem 0.5rem;
   color: var(--bs-table-color-state, var(--bs-table-color-type, var(--bs-table-color)));
@@ -1889,7 +1889,7 @@ progress {
   vertical-align: bottom;
 } */
 
-.table-group-divider {
+/* .table-group-divider {
   border-top: calc(var(--bs-border-width) * 2) solid currentcolor;
 }
 
@@ -2081,7 +2081,7 @@ progress {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
   }
-}
+} */
 .form-label {
   margin-top: 0.5rem;
 }
