--- a/camp/src/main/webapp/resources/css/login.css
+++ b/camp/src/main/webapp/resources/css/login.css
@@ -130,6 +130,7 @@ align-items: center;
 
 .navbar li {
 position: relative;
+display: flex;
 font-size: 18px;
 color: white;
 }
@@ -220,7 +221,7 @@ visibility: visible;
 }
 
 a {
-color: #22c730;
+color: #0b9d18;
 text-decoration: none;
 }
 
@@ -229,7 +230,15 @@ a:hover {
   text-decoration: none;
 }
 
+#member-profile {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
 
+#memberId {
+  padding: 10px 0 10px 10px !important;
+}
 
 /* #myPage {
 cursor: pointer;
@@ -422,10 +431,7 @@ cursor: pointer;
     opacity: 0.65;
     transform: scale(0.85) translateY(-0.5rem) translateX(0.15rem);
   }
-  .form-floating > .form-control:focus ~ label,
-  .form-floating > .form-control:not(:placeholder-shown) ~ label,
-  .form-floating > .form-control-plaintext ~ label,
-  .form-floating > .form-select ~ label {
+  .form-floating > .form-control:focus ~ label {
     opacity: 0.65;
     transform: scale(0.85) translateY(-0.5rem) translateX(0.15rem);
   }
