--- a/camp/src/main/webapp/resources/css/main-bootstrap.css
+++ b/camp/src/main/webapp/resources/css/main-bootstrap.css
@@ -319,9 +319,9 @@ svg {
 	vertical-align: middle;
 }
 
-table {
+/* table {
 	border-collapse: collapse;
-}
+} */
 
 caption {
 	padding-top: 0.75rem;
@@ -331,9 +331,9 @@ caption {
 	caption-side: bottom;
 }
 
-th {
+/* th {
 	text-align: inherit;
-}
+} */
 
 label {
 	display: inline-block;
@@ -1577,192 +1577,7 @@ pre code {
 	}
 }
 
-.table {
-	width: 100%;
-	margin-bottom: 1rem;
-	background-color: transparent;
-}
 
-.table th,
-.table td {
-	padding: 0.75rem;
-	vertical-align: top;
-	border-top: 1px solid #dee2e6;
-}
-
-.table thead th {
-	vertical-align: bottom;
-	border-bottom: 2px solid #dee2e6;
-}
-
-.table tbody + tbody {
-	border-top: 2px solid #dee2e6;
-}
-
-.table .table {
-	background-color: #ffffff;
-}
-
-.table-sm th,
-.table-sm td {
-	padding: 0.3rem;
-}
-
-.table-bordered {
-	border: 1px solid #dee2e6;
-}
-
-.table-bordered th,
-.table-bordered td {
-	border: 1px solid #dee2e6;
-}
-
-.table-bordered thead th,
-.table-bordered thead td {
-	border-bottom-width: 2px;
-}
-
-.table-borderless th,
-.table-borderless td,
-.table-borderless thead th,
-.table-borderless tbody + tbody {
-	border: 0;
-}
-
-.table-striped tbody tr:nth-of-type(odd) {
-	background-color: rgba(0, 0, 0, 0.05);
-}
-
-.table-hover tbody tr:hover {
-	background-color: rgba(0, 0, 0, 0.075);
-}
-
-.table-active,
-.table-active > th,
-.table-active > td {
-	background-color: rgba(0, 0, 0, 0.075);
-}
-
-.table-hover .table-active:hover {
-	background-color: rgba(0, 0, 0, 0.075);
-}
-
-.table-hover .table-active:hover > td,
-.table-hover .table-active:hover > th {
-	background-color: rgba(0, 0, 0, 0.075);
-}
-
-.table .thead-dark th {
-	color: #fff;
-	background-color: #212529;
-	border-color: #32383e;
-}
-
-.table .thead-light th {
-	color: #495057;
-	background-color: #e9ecef;
-	border-color: #dee2e6;
-}
-
-.table-dark {
-	color: #fff;
-	background-color: #212529;
-}
-
-.table-dark th,
-.table-dark td,
-.table-dark thead th {
-	border-color: #32383e;
-}
-
-.table-dark.table-bordered {
-	border: 0;
-}
-
-.table-dark.table-striped tbody tr:nth-of-type(odd) {
-	background-color: rgba(255, 255, 255, 0.05);
-}
-
-.table-dark.table-hover tbody tr:hover {
-	background-color: rgba(255, 255, 255, 0.075);
-}
-
-@media (max-width: 575.98px) {
-	.table-responsive-sm {
-		display: block;
-		width: 100%;
-		overflow-x: auto;
-		-webkit-overflow-scrolling: touch;
-		-ms-overflow-style: -ms-autohiding-scrollbar;
-	}
-	.table-responsive-sm > .table-bordered {
-		border: 0;
-	}
-}
-
-@media (max-width: 767.98px) {
-	.table-responsive-md {
-		display: block;
-		width: 100%;
-		overflow-x: auto;
-		-webkit-overflow-scrolling: touch;
-		-ms-overflow-style: -ms-autohiding-scrollbar;
-	}
-	.table-responsive-md > .table-bordered {
-		border: 0;
-	}
-}
-
-@media (max-width: 991.98px) {
-	.table-responsive-lg {
-		display: block;
-		width: 100%;
-		overflow-x: auto;
-		-webkit-overflow-scrolling: touch;
-		-ms-overflow-style: -ms-autohiding-scrollbar;
-	}
-	.table-responsive-lg > .table-bordered {
-		border: 0;
-	}
-}
-
-@media (max-width: 1199.98px) {
-	.table-responsive-xl {
-		display: block;
-		width: 100%;
-		overflow-x: auto;
-		-webkit-overflow-scrolling: touch;
-		-ms-overflow-style: -ms-autohiding-scrollbar;
-	}
-	.table-responsive-xl > .table-bordered {
-		border: 0;
-	}
-}
-
-@media (max-width: 1599.98px) {
-	.table-responsive-xxl {
-		display: block;
-		width: 100%;
-		overflow-x: auto;
-		-webkit-overflow-scrolling: touch;
-		-ms-overflow-style: -ms-autohiding-scrollbar;
-	}
-	.table-responsive-xxl > .table-bordered {
-		border: 0;
-	}
-}
-
-.table-responsive {
-	display: block;
-	width: 100%;
-	overflow-x: auto;
-	-webkit-overflow-scrolling: touch;
-	-ms-overflow-style: -ms-autohiding-scrollbar;
-}
-
-.table-responsive > .table-bordered {
-	border: 0;
-}
 
 .form-control {
 	display: block;
@@ -8067,7 +7882,7 @@ button.close {
 	.badge {
 		border: 1px solid #000000;
 	}
-	.table {
+	/* .table {
 		border-collapse: collapse !important;
 	}
 	.table td,
@@ -8090,5 +7905,5 @@ button.close {
 	.table .thead-dark th {
 		color: inherit;
 		border-color: #dee2e6;
-	}
+	} */
 }
