--- a/camp/src/main/webapp/resources/css/mypage.css
+++ b/camp/src/main/webapp/resources/css/mypage.css
@@ -98,7 +98,7 @@
 }
 
 .myPage-row > input{
-    width: 70%;
+    width: 100%;
     height: 100%;
     border : 0;
     outline: 0;
@@ -132,6 +132,7 @@ form[name="myPage-form"]{
     align-items: center;
 
     position : relative;
+    margin-left: 70px;
 }
 
 /* 프로필 이미지 */
@@ -150,6 +151,7 @@ form[name="myPage-form"]{
     display: flex;
     align-items: center;
     justify-content: space-around;
+    margin-left: 135px;
 }
 
 /* 프로필 버튼 영역의 모든 자식 요소 */
@@ -214,7 +216,7 @@ form[name="myPage-form"]{
 }
 
 #info-update-btn {
-    width: 50%;
+    width: 40%;
     padding: 10px;
     margin: 50px 0;
     border: none;
@@ -295,5 +297,236 @@ form[name="myPage-form"]{
     order: -1;
   }
   
+  .table {
+    --bs-table-color-type: initial;
+    --bs-table-bg-type: initial;
+    --bs-table-color-state: initial;
+    --bs-table-bg-state: initial;
+    --bs-table-color: var(--bs-body-color);
+    --bs-table-bg: var(--bs-body-bg);
+    --bs-table-border-color: rgba(0, 0, 0, 0.05);
+    --bs-table-accent-bg: transparent;
+    --bs-table-striped-color: var(--bs-body-color);
+    --bs-table-striped-bg: rgba(0, 0, 0, 0.05);
+    --bs-table-active-color: var(--bs-body-color);
+    --bs-table-active-bg: rgba(0, 0, 0, 0.1);
+    --bs-table-hover-color: var(--bs-body-color);
+    --bs-table-hover-bg: rgba(0, 0, 0, 0.075);
+    width: 100%;
+    margin-bottom: 1rem;
+    vertical-align: top;
+    border-color: var(--bs-table-border-color);
+  }
+
+  .table > tbody > tr > td > a {
+    color: black;
+  }
+
+  .table > :not(caption) > * > * {
+    padding: 0.5rem 0.5rem;
+    color: var(--bs-table-color-state, var(--bs-table-color-type, var(--bs-table-color)));
+    background-color: var(--bs-table-bg);
+    border-bottom-width: var(--bs-border-width);
+    box-shadow: inset 0 0 0 9999px var(--bs-table-bg-state, var(--bs-table-bg-type, var(--bs-table-accent-bg)));
+  }
+  .table > tbody {
+    vertical-align: inherit;
+  }
+  .table > thead {
+    vertical-align: bottom;
+  }
   
+  .table-group-divider {
+    border-top: calc(var(--bs-border-width) * 2) solid currentcolor;
+  }
+  
+  .caption-top {
+    caption-side: top;
+  }
+  
+  .table-sm > :not(caption) > * > * {
+    padding: 0.25rem 0.25rem;
+  }
+  
+  .table-bordered > :not(caption) > * {
+    border-width: var(--bs-border-width) 0;
+  }
+  .table-bordered > :not(caption) > * > * {
+    border-width: 0 var(--bs-border-width);
+  }
+  
+  .table-borderless > :not(caption) > * > * {
+    border-bottom-width: 0;
+  }
+  .table-borderless > :not(:first-child) {
+    border-top-width: 0;
+  }
+  
+  .table-striped > tbody > tr:nth-of-type(odd) > * {
+    --bs-table-color-type: var(--bs-table-striped-color);
+    --bs-table-bg-type: var(--bs-table-striped-bg);
+  }
+  
+  .table-striped-columns > :not(caption) > tr > :nth-child(even) {
+    --bs-table-color-type: var(--bs-table-striped-color);
+    --bs-table-bg-type: var(--bs-table-striped-bg);
+  }
+  
+  .table-active {
+    --bs-table-color-state: var(--bs-table-active-color);
+    --bs-table-bg-state: var(--bs-table-active-bg);
+  }
+  
+  .table-hover > tbody > tr:hover > * {
+    --bs-table-color-state: var(--bs-table-hover-color);
+    --bs-table-bg-state: var(--bs-table-hover-bg);
+  }
+  
+  .table-primary {
+    --bs-table-color: #000;
+    --bs-table-bg: #d1d1d1;
+    --bs-table-border-color: #bcbcbc;
+    --bs-table-striped-bg: #c7c7c7;
+    --bs-table-striped-color: #000;
+    --bs-table-active-bg: #bcbcbc;
+    --bs-table-active-color: #000;
+    --bs-table-hover-bg: #c1c1c1;
+    --bs-table-hover-color: #000;
+    color: var(--bs-table-color);
+    border-color: var(--bs-table-border-color);
+  }
+  
+  .table-secondary {
+    --bs-table-color: #000;
+    --bs-table-bg: white;
+    --bs-table-border-color: #e6e6e6;
+    --bs-table-striped-bg: #f2f2f2;
+    --bs-table-striped-color: #000;
+    --bs-table-active-bg: #e6e6e6;
+    --bs-table-active-color: #000;
+    --bs-table-hover-bg: #ececec;
+    --bs-table-hover-color: #000;
+    color: var(--bs-table-color);
+    border-color: var(--bs-table-border-color);
+  }
+  
+  .table-success {
+    --bs-table-color: #000;
+    --bs-table-bg: #dbf2e3;
+    --bs-table-border-color: #c5dacc;
+    --bs-table-striped-bg: #d0e6d8;
+    --bs-table-striped-color: #000;
+    --bs-table-active-bg: #c5dacc;
+    --bs-table-active-color: #000;
+    --bs-table-hover-bg: #cbe0d2;
+    --bs-table-hover-color: #000;
+    color: var(--bs-table-color);
+    border-color: var(--bs-table-border-color);
+  }
+  
+  .table-info {
+    --bs-table-color: #000;
+    --bs-table-bg: #d2ebf5;
+    --bs-table-border-color: #bdd4dd;
+    --bs-table-striped-bg: #c8dfe9;
+    --bs-table-striped-color: #000;
+    --bs-table-active-bg: #bdd4dd;
+    --bs-table-active-color: #000;
+    --bs-table-hover-bg: #c2d9e3;
+    --bs-table-hover-color: #000;
+    color: var(--bs-table-color);
+    border-color: var(--bs-table-border-color);
+  }
+  
+  .table-warning {
+    --bs-table-color: #000;
+    --bs-table-bg: #fcefdc;
+    --bs-table-border-color: #e3d7c6;
+    --bs-table-striped-bg: #efe3d1;
+    --bs-table-striped-color: #000;
+    --bs-table-active-bg: #e3d7c6;
+    --bs-table-active-color: #000;
+    --bs-table-hover-bg: #e9ddcc;
+    --bs-table-hover-color: #000;
+    color: var(--bs-table-color);
+    border-color: var(--bs-table-border-color);
+  }
+  
+  .table-danger {
+    --bs-table-color: #000;
+    --bs-table-bg: #f7dddc;
+    --bs-table-border-color: #dec7c6;
+    --bs-table-striped-bg: #ebd2d1;
+    --bs-table-striped-color: #000;
+    --bs-table-active-bg: #dec7c6;
+    --bs-table-active-color: #000;
+    --bs-table-hover-bg: #e4cccc;
+    --bs-table-hover-color: #000;
+    color: var(--bs-table-color);
+    border-color: var(--bs-table-border-color);
+  }
+  
+  .table-light {
+    --bs-table-color: #000;
+    --bs-table-bg: #fff;
+    --bs-table-border-color: #e6e6e6;
+    --bs-table-striped-bg: #f2f2f2;
+    --bs-table-striped-color: #000;
+    --bs-table-active-bg: #e6e6e6;
+    --bs-table-active-color: #000;
+    --bs-table-hover-bg: #ececec;
+    --bs-table-hover-color: #000;
+    color: var(--bs-table-color);
+    border-color: var(--bs-table-border-color);
+  }
+  
+  .table-dark {
+    --bs-table-color: #fff;
+    --bs-table-bg: #343a40;
+    --bs-table-border-color: #484e53;
+    --bs-table-striped-bg: #3e444a;
+    --bs-table-striped-color: #fff;
+    --bs-table-active-bg: #484e53;
+    --bs-table-active-color: #fff;
+    --bs-table-hover-bg: #43494e;
+    --bs-table-hover-color: #fff;
+    color: var(--bs-table-color);
+    border-color: var(--bs-table-border-color);
+  }
+  
+  .table-responsive {
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+  }
+  
+  @media (max-width: 575.98px) {
+    .table-responsive-sm {
+      overflow-x: auto;
+      -webkit-overflow-scrolling: touch;
+    }
+  }
+  @media (max-width: 767.98px) {
+    .table-responsive-md {
+      overflow-x: auto;
+      -webkit-overflow-scrolling: touch;
+    }
+  }
+  @media (max-width: 991.98px) {
+    .table-responsive-lg {
+      overflow-x: auto;
+      -webkit-overflow-scrolling: touch;
+    }
+  }
+  @media (max-width: 1199.98px) {
+    .table-responsive-xl {
+      overflow-x: auto;
+      -webkit-overflow-scrolling: touch;
+    }
+  }
+  @media (max-width: 1399.98px) {
+    .table-responsive-xxl {
+      overflow-x: auto;
+      -webkit-overflow-scrolling: touch;
+    }
+  }  
   
