--- a/camp/src/main/webapp/resources/css/detailList.css
+++ b/camp/src/main/webapp/resources/css/detailList.css
@@ -10,6 +10,61 @@ main {
 
 }
 
+/* image modal */
+
+ .modalTest:hover{
+    cursor: -webkit-zoom-in;
+}
+
+
+/**********************************************/
+/* modal : 화면내에 html 요소를 이용해서 만드는 분할 창 */
+.modal{
+    background-color: rgba(0, 0, 0, 0.4);
+
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    z-index: 50;
+
+    display: none;
+}
+
+.modal.show { /* 클래스로 modal, show를 동시에 가진 요소 선택 */
+    display: flex;
+
+    animation-name: show; /* @keyframes  show 적용 */
+    animation-duration: 0.5s;  /* 애니메이션 수행 시간 */
+}
+
+.modal.hide{
+    animation-name: hide; /* @keyframes  show 적용 */
+    animation-duration: 0.5s;  /* 애니메이션 수행 시간 */
+}
+
+#modal-image {
+    background-color: white;
+    margin: auto;
+    border-radius: 10px;
+    max-width: 80%;
+    max-height: 80%;
+    cursor: -webkit-zoom-out;
+}
+@keyframes show {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+@keyframes hide {
+    from {opacity: 1;}
+    to {opacity: 0;}
+}
+/* 모달 끝 */
+
 
 body {
     margin: 0;
@@ -178,8 +233,9 @@ body {
     height: auto;
     border: 1px solid #dedede;
     background-color: white;
-    border-radius: 10px;
     padding-bottom: 20px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
 
 
@@ -640,12 +696,14 @@ height: auto;
 border: 1px solid rgb(210, 210, 210);
 border-bottom-left-radius: 10px;
 border-bottom-right-radius: 10px;
+
 }
 
 .table_w3 > .table {
     margin-bottom: 0px;
     height: 400px;
     text-align: center;
+    background-color: white;
 }
 .table_w3 > .table > thead {
     height: 50px;
