--- a/camp/src/main/webapp/resources/css/mypage.css
+++ b/camp/src/main/webapp/resources/css/mypage.css
@@ -19,6 +19,15 @@
     text-align: center;
     height: 300px;
 }
+.left-side > h3 {
+  background-color: #343a40;
+  margin-left: 5px;
+  margin-right: 5px;
+  padding: 15px;
+  color: white;
+
+}
+
 
 .list-group{
     width: 100%;
