--- a/camp/src/main/webapp/resources/css/reservation.css
+++ b/camp/src/main/webapp/resources/css/reservation.css
@@ -17,6 +17,8 @@ a{
 .priceTable {
     border-collapse: collapse;
     width: 100%;
+    font-size: 17px;
+    background-color: rgba(246, 246, 246, 0.819);
 }
 #peopleNo{
     display: flex;
@@ -313,7 +315,10 @@ a{
     box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 .adultSelect, .childSelect{
-    width: 20px;
+    width: 35px;
+    background-color: white;
+    border-radius: 5px;
+    height: 35px;
 }
 .pickMonth, .pickDay, .mon, .dat{
     width: 25px;
