소셜로그인도 정보수정/탈퇴 가능, 예약했던 캠핑장만 리뷰등록가능

--- a/camp/src/main/webapp/resources/css/boardList-style2.css
+++ b/camp/src/main/webapp/resources/css/boardList-style2.css
@@ -16,7 +16,7 @@
 .left-side{
     position: sticky;
     top: 120px;
-    width: 12%;
+    width: 200px;
     
     /* border-right : 2px solid gray; */
     text-align: center;
@@ -71,7 +71,7 @@
 /* 게시판 목록 화면 전체 영역 설정 */
 .board-list{
    /*  width: 1000px; */
-    margin: 50px auto;
+  /*   margin: 50px auto; */
     margin-top: 0px;
     display: flex;
     justify-content: center;
