--- a/camp/src/main/webapp/resources/css/main.css
+++ b/camp/src/main/webapp/resources/css/main.css
@@ -44,6 +44,7 @@ transition: background-color 5000s;
   padding: 0;
   margin: 0;
   max-height: 90px;
+  width: 200px;
 }
 
 #header .logo h1 {
@@ -182,13 +183,13 @@ a:hover {
     text-decoration: none;
 }
 
-#member-profile {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
+#member-profile1 {
+  width: 40px !important;
+  height: 40px !important;
+  border-radius: 50% !important;
 }
 
-#memberId {
+ #memberId {
   padding: 10px 0 10px 10px !important;
 }
 
