--- a/camp/src/main/webapp/resources/css/mypage.css
+++ b/camp/src/main/webapp/resources/css/mypage.css
@@ -33,6 +33,16 @@
   height: 30px;
   cursor: pointer;
 }
+#checkBoxdiv{
+  margin-top: 20px;
+  font-size: 17px;
+  display: flex;
+  align-items: center;
+}
+#agree{
+  width: 20px;
+  height: 20px;
+}
 
 
 .secessionContent{
@@ -84,6 +94,7 @@
     list-style: none;
     height: 50px;
     font-size: 18px;
+    padding: 30px;
 }
 
 .list-group  li > a{
@@ -371,7 +382,7 @@ form[name="myPage-form"]{
     --bs-table-active-color: var(--bs-body-color);
     --bs-table-active-bg: rgba(0, 0, 0, 0.1);
     --bs-table-hover-color: var(--bs-body-color);
-    --bs-table-hover-bg: rgba(0, 0, 0, 0.075);
+    --bs-table-hover-bg: rgb(0 0 0 / 24%);
     width: 100%;
     margin-bottom: 1rem;
     vertical-align: top;
