--- a/camp/src/main/webapp/resources/css/calendarStyle.css
+++ b/camp/src/main/webapp/resources/css/calendarStyle.css
@@ -79,8 +79,8 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 25px;
-    font-size: 10px;
+    padding: 0 33px;
+    font-size: 14px;
     font-weight: 500;
     text-transform: capitalize;
 }
@@ -90,6 +90,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    
 }
 .calendar .days{
     width: 100%;
@@ -98,7 +99,7 @@ body{
     flex-wrap: wrap;
     /* justify-content: space-between; */
     padding: 0 50px 0 30px;
-    font-size: 8px;
+    font-size: 10px;
     font-weight: 500;
     margin: 0 10px 20px 10px;
 
@@ -111,7 +112,7 @@ body{
     justify-content: flex-start;
     cursor: pointer;
     color: var(--primary-clr);
-    border: 1px solid #fff;
+    border: 2px solid #fff;
     font-size: 15px;
 }
 
@@ -146,6 +147,8 @@ body{
 .calendar .days .today {
     font-size: 30px;
     font-weight: bold;
+    justify-content: flex-start;
+    align-items: flex-start;
    
 }
 .calendar .days .event{
