--- a/camp/src/main/webapp/resources/css/boardList-style3.css
+++ b/camp/src/main/webapp/resources/css/boardList-style3.css
@@ -60,6 +60,7 @@
 /* 사이드메뉴 끝  */
 
 /* a태그 공통 설정 */
+
 .board-list a{
     text-decoration: none;
     color : black;
@@ -130,13 +131,22 @@
 .list-table tr > td:nth-of-type(2){ 
     width: 50%;
     text-align: left;
-    padding-left : 50px;
 }
 
 .list-table tr > *:nth-of-type(3){ width: 15%;}
 .list-table tr > *:nth-of-type(4){ width: 15%;}
 .list-table tr > *:nth-of-type(5){ width: 10%;}
 
+#boardListP  {
+    margin : 0px 
+}
+
+.CWUspan{
+    font-size: 17px;
+}
+#myPageHeadFlexImg{
+    background-image: url(../images/12.png);
+}
 
 /* 버튼 영역 */
 .btn-area{
