--- a/camp/src/main/webapp/resources/css/campList.css
+++ b/camp/src/main/webapp/resources/css/campList.css
@@ -291,12 +291,12 @@ hr {
 }
 
 .page-button.active {
-  background-color: #555;
+  background-color: #eb5d1e ;
   color: #fff;
 }
 
 .page-button:hover {
-  background-color: #555;
+  background-color: #eb5d1e ;
   color: #fff;
 }
 
@@ -315,7 +315,7 @@ hr {
 
 .pagination-previous:hover,
 .pagination-next:hover {
-  background-color: #333;
+  background-color: #eb5d1e ;
 }
 .pagination-previous {
   order: -1;
