--- a/camp/src/main/webapp/resources/css/mypage.css
+++ b/camp/src/main/webapp/resources/css/mypage.css
@@ -329,7 +329,7 @@ form[name="myPage-form"]{
     border: none;
     font-size: 20px;
     font-weight: bold;
-    background-color: #ee7843;
+    background-color: #f1520b;
     color: white;
     cursor: pointer;
     border-radius: var(--bs-border-radius);
