--- a/camp/src/main/webapp/resources/css/login.css
+++ b/camp/src/main/webapp/resources/css/login.css
@@ -123,10 +123,10 @@ margin-bottom: -9px;
 }
 
 #header .logo img {
-padding: 0;
-margin: 0;
-max-height: 90px;
-width: 200px;
+  padding: 5px;
+  margin: 0;
+  max-height: 90px;
+  margin-left: 20px;
 }
 
 .navbar {
