--- a/camp/src/main/webapp/resources/css/mypage.css
+++ b/camp/src/main/webapp/resources/css/mypage.css
@@ -57,8 +57,28 @@ section.myPage-main > .reply-list-area > #reply-list > li {
 }
 
 
-
-
+.secessionborder{
+  margin-top: 50px;
+  width: 1000px;
+  display: flex;
+  border: 4px solid #e9480885;
+  box-shadow: 5px 5px 10px 5px #ed946fb5;
+  border-radius: 2rem;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+.changePwborder{
+  margin-top: 50px;
+  width: 800  px;
+  display: flex;
+  border: 4px solid #e9480885;
+  box-shadow: 5px 5px 10px 5px #ed946fb5;
+  border-radius: 2rem;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 .secessionContent{
   border: 1px solid black;
@@ -138,12 +158,13 @@ section.myPage-main > .reply-list-area > #reply-list > li {
     min-height: 670px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+  /*   align-items: center; */
+  padding-bottom: 100px;
 }
 
 .myPage-title{
     margin : 20px 0 20px 0;
-    font-size: 30px;
+    font-size: 40px;
 }
 
 .myPage-explanation{
@@ -168,7 +189,7 @@ section.myPage-main > .reply-list-area > #reply-list > li {
     height: 200px;
 }
 #form-profileImage > label {
-  margin-left: 10px;
+
   font-size: 20px;
   font-weight: bold;
 }
@@ -211,6 +232,7 @@ form[name="myPage-form"]{
     justify-content: center;
     align-items: center;
     margin-top:40px;
+    width: 750px;
 }
 /************************************/
 
@@ -219,11 +241,18 @@ form[name="myPage-form"]{
 /* 프로필 이미지 영역 */
 .infoborder{
   margin-top: 50px;
-  width: 80%;
+  width: 1100px;
   display: flex;
   border: 4px solid #e9480885;
   box-shadow: 5px 5px 10px 5px #ed946fb5;
   border-radius: 2rem;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding-right: 140px;
+}
+#form-profileImage{
+  margin-top: 0px;
 }
 .profile-image-area{
     width: 150px;
@@ -236,7 +265,7 @@ form[name="myPage-form"]{
     align-items: center;
 
     position : relative;
-    margin-left: 25px;
+
 }
 
 /* 프로필 이미지 */
@@ -250,12 +279,12 @@ form[name="myPage-form"]{
 .profile-btn-area{
     width: 230px;
     position: relative;
-    left: -20px;
+
     margin: 10px 0;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    margin-left: 80px;
+
 }
 
 /* 프로필 버튼 영역의 모든 자식 요소 */
@@ -266,8 +295,8 @@ form[name="myPage-form"]{
     width: 110px;
     height: 40px;
     padding: 5px 10px;
-    border: 1px solid black;
-    background-color: white;
+    background-color: #ee7843;
+    color: white;
     font-size: 14px;
     cursor: pointer;
     text-align: center;
@@ -288,6 +317,9 @@ form[name="myPage-form"]{
 
 .profile-btn-area > button:hover{
     background-color: #ef7f4d;
+}
+.profile-btn-area > label:hover{
+  background-color: #ef7f4d;
 }
 
 /* 프로필 이미지 삭제 버튼 */
