게시글 상세 css 업데이트

--- a/camp/src/main/webapp/resources/css/boardDetail-style.css
+++ b/camp/src/main/webapp/resources/css/boardDetail-style.css
@@ -1,9 +1,9 @@
 /* 상세조회 전체 영역 */
 .board-detail{
-    width: 1000px;
+    width: 1500px;
     min-height: 700px;
     border:  1px solid #ccc;
-    margin: 50px auto;
+    margin: 100px auto 50px auto;
     padding: 20px;
 }
 
@@ -110,6 +110,7 @@
     border-bottom : 3px solid #ccc;
 
     font-size: 18px;
+    min-height: 500px;
 }
 
 .board-content > textarea{
@@ -131,16 +132,16 @@
 
     font-weight: bold;
     border: 0;
-    background-color: #455ba8;
+    background-color: #ee7843;
     color : white;
 
     cursor: pointer;
 }
 
 .board-btn-area button:hover{
-    background-color: white;
-    color : #455ba8;
-    border: 2px solid #455ba8;
+    background-color: #ef7f4d;
+    color : white;
+    border: 2px solid #fff;
 }
 
 .container,
