board pagination css

--- a/camp/src/main/webapp/resources/css/boardList-style.css
+++ b/camp/src/main/webapp/resources/css/boardList-style.css
@@ -129,14 +129,14 @@ thead tr:nth-child(1) {
 .pagination{
     padding: 0;
     list-style: none;
-
+    font-size: 22px;
     display: flex;
     justify-content: center;
 }
 
 .pagination > li{
     width: 20px;
-    margin: 0 5px;
+    margin: 0 10px;
     text-align: center;
 }
 
@@ -144,13 +144,19 @@ thead tr:nth-child(1) {
     width: 100%;
     height: 100%;
     display: block;
+    color: #4d5053;
+    font-size: 25px;
     /* letter-spacing : -2px; */
+}
+.pagination a :hover{
+    color: #ef7b3a;
 }
 
 /* 현재 페이지 번호 */
 .pagination .current{
-    background-color: #495057;
-    border-radius: 50%;
+    width: 24px;
+    background-color: #4d5053;
+    border-radius: 30%;
     color: white;
     font-weight: bold;
 }
