--- a/camp/src/main/webapp/resources/css/boardList-style2.css
+++ b/camp/src/main/webapp/resources/css/boardList-style2.css
@@ -1,6 +1,38 @@
-/* section, div, form{
-    border : 1px solid black;
-} */
+/* 페이지네이션(Pagination) */
+.pagination{
+    padding: 0;
+    list-style: none;
+    font-size: 22px;
+    display: flex;
+    justify-content: center;
+}
+
+.pagination > li{
+    width: 20px;
+    margin: 0 10px;
+    text-align: center;
+}
+
+.pagination a{
+    width: 100%;
+    height: 100%;
+    display: block;
+    color: #4d5053;
+    font-size: 25px;
+    /* letter-spacing : -2px; */
+}
+.pagination a :hover{
+    color: #ef7b3a;
+}
+
+/* 현재 페이지 번호 */
+.pagination .current{
+    width: 24px;
+    background-color: #4d5053;
+    border-radius: 30%;
+    color: white;
+    font-weight: bold;
+}
 
 
 /* 왼쪽 사이드 메뉴 */
@@ -217,38 +249,6 @@
 
     font-weight: bold;
     cursor: pointer;
-}
-
-
-/* 페이지네이션(Pagination) */
-.pagination{
-    padding: 0;
-    list-style: none;
-
-    display: flex;
-    justify-content: center;
-}
-
-.pagination > li{
-    width: 20px;
-    margin: 0 5px;
-    text-align: center;
-}
-
-.pagination a{
-    width: 100%;
-    height: 100%;
-    display: block;
-    /* letter-spacing : -2px; */
-}
-
-
-/* 현재 페이지 번호 */
-.pagination .current{
-    background-color: #455ba8;
-    border-radius: 50%;
-    color: white;
-    font-weight: bold;
 }
 
 
